Add language indexes and pages

--- a/方案.md
+++ b/方案.md
@@ -235,7 +235,7 @@ data/
 ## 11. 分类与展示建议（MVP 默认值，可调整）
 
 - 分类（slug）：`world`、`business`、`tech`、`science`、`health`、`sports`、`entertainment`
-- 站点文案语言：中文 UI + 英文内容（也可全英文 UI）
+- 站点文案语言：英文 UI + 英文内容
 - 条目页：展示摘要（来自 RSS description）+ “阅读原文”跳转
 
 ## 12. 开发TODO（5轮迭代循环）
@@ -248,6 +248,7 @@ data/
 
 - 安装依赖：`npm ci`
 - 抓取与入库：`npm run update`
+- 归档+清理（可选）：`ARCHIVE_OLD=1 npm run update`（归档输出到 `archives/`，默认不提交到仓库）
 - 本地预览：`npm run dev`（11ty 预览）
 - 构建发布：`npm run build:site`（11ty + Pagefind）
 
