feat(.eleventy.js): 添加XML转义、HTML解码和标题格式化过滤器
添加了以下新功能：
- xmlEscape函数：用于XML内容转义，防止特殊字符破坏XML结构
- decodeHtmlEntities函数：解码HTML实体字符
- titleCase函数：将文本转换为标题格式
- rfc822过滤器：日期格式化为RFC822标准格式
- 配置GitHub Actions以自动计算页面基础URL和路径前缀
- 更新README.md文档，添加新的环境变量说明
- 移除robots.txt的直接复制配置

--- a/方案.md
+++ b/方案.md
@@ -151,7 +151,12 @@ data/
 ### 6.2 页面结构（MVP）
 
 - `/`：最新新闻流（按时间倒序），支持简单筛选（分类/语言）
+- `/feed.xml`：站点 RSS（最新条目）
 - `/category/<name>/`：分类聚合
+- `/category/<name>/feed.xml`：分类 RSS
+- `/languages/`：语言列表
+- `/lang/<code>/`：按语言聚合（可分页）
+- `/lang/<code>/feed.xml`：语言 RSS
 - `/p/<id>/`：条目页
   - 展示：标题、来源、发布时间、摘要、跳转原文按钮
   - 不建议展示全文（版权/合规）
@@ -182,7 +187,7 @@ data/
 
 - 数据入库：提交 `data/articles` 与 `data/indexes`，并用保留策略控制体积。
 - 构建输出：固定到 `dist/`，由 Pages 部署该目录。
-- 失败处理：单源失败不影响整体；抓取超时与重试；输出失败源列表到构建日志。
+- 失败处理：单源失败不影响整体；抓取超时与重试；连续失败源自动退避；在 GitHub Actions Summary 输出失败/退避列表。
 
 ### 7.4 本仓库实现（落地说明）
 
@@ -256,5 +261,5 @@ data/
 
 - Actions 部署：已提供 workflow（每 8 小时触发一次，UTC）。
 - 站点 URL 与路径前缀：
-  - `SITE_URL`：用于 `sitemap.xml`/canonical（建议在仓库变量或 workflow env 中设置）
+  - `SITE_URL`：用于 `sitemap.xml`/canonical/RSS 绝对链接（建议设置为站点域名，例如 `https://<owner>.github.io`，不要包含 `/<repo>/`）
   - `PATH_PREFIX`：如果是 Project Pages，通常是 `/<repo>/`；User Pages 通常是 `/`
